# pingora-systemd-zero-downtime

./: Cargo.toml  deploy.sh  psdzd.service
rs-psdzd/: Cargo.toml
rs-psdzd/src/: main.rs
rs-replacer/: Cargo.toml
rs-replacer/src/: main.rs
src/: main.rs
