[package]
name = "psdzd"
version = "0.1.0"
edition = "2021"


[dependencies]
async-trait = "0.1.82"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.7.1"
pingora = "0.3.0"
pingora-core = "0.3.0"
pingora-http = "0.3.0"
pingora-load-balancing = "0.3.0"
pingora-proxy = "0.3.0"
tokio = { version = "1", features = ["default", "fs", "process", "io-util"] }
rand = "0.8.5"
uuid = { version = "1.10", features = ["v4"] }
env_logger = "0.11.5"
sd-notify = "0.4.3"
